# llm-metadata-annotation

./: .gitattributes  .gitignore  LICENSE  README.md  default.env  example.html  pyproject.toml
configs/nephgen-nine/: README.md  claude37sonnet.yml  gemini20flash.yml  gemini25flashpreview.yml  gemini25propreview.yml  gpt41.yml  gpt41mini.yml  gpt41nano.yml  gpt4o.yml  gpt4omini.yml  llama4maverick.yml  ministral8b.yml  mistral31small24b.yml  mistrallarge2411.yml  mistralmedium3.yml  o4mini.yml
configs/nephgen-nine/common/: messages.yml  schemas.yml
datasets/: README.md
datasets/nephgen-nine/li/: paper.html  paper.md
datasets/nephgen-nine/monteiro-martins/: paper.html  paper.md
datasets/nephgen-nine/patil/: paper.html  paper.md
datasets/nephgen-nine/rodriguez-hernandez/: paper.html  paper.md
datasets/nephgen-nine/scherer/: paper.html  paper.md
datasets/nephgen-nine/schlosser/: paper.html  paper.md
datasets/nephgen-nine/schmidt/: paper.html  paper.md
datasets/nephgen-nine/steinbrenner/: paper.html  paper.md
datasets/nephgen-nine/yeo/: paper.html  paper.md
metadata/: README.md
saved_experiments/nephgen-nine/20250416_150140-n9-mistral31small24b/: config.yaml  conversations.json  data.json  log.txt
saved_experiments/nephgen-nine/20250417_111409-n9-gemini20flash/: config.yaml  conversations.json  data.json  log.txt
saved_experiments/nephgen-nine/20250417_151034-n9-gpt4o/: config.yaml  conversations.json  data.json  log.txt
saved_experiments/nephgen-nine/20250417_170506-n9-llama4maverick/: config.yaml  conversations.json  data.json  log.txt
saved_experiments/nephgen-nine/20250422_100826-n9-ministral8b/: config.yaml  conversations.json  data.json  log.txt
saved_experiments/nephgen-nine/20250422_102427-n9-mistrallarge2411/: config.yaml  conversations.json  data.json  log.txt
saved_experiments/nephgen-nine/20250422_105839-n9-o4mini/: config.yaml  conversations.json  data.json  log.txt
saved_experiments/nephgen-nine/20250424_150228-n9-gpt4omini/: config.yaml  conversations.json  data.json  log.txt
saved_experiments/nephgen-nine/20250424_160823-n9-gpt41nano/: config.yaml  conversations.json  data.json  log.txt
saved_experiments/nephgen-nine/20250424_161851-n9-gpt41mini/: config.yaml  conversations.json  data.json  log.txt
saved_experiments/nephgen-nine/20250429_094135-n9-gpt41/: config.yaml  conversations.json  data.json  log.txt
saved_experiments/nephgen-nine/20250509_115020-n9-gemini25flashpreview/: config.yaml  conversations.json  data.json  log.txt
saved_experiments/nephgen-nine/20250509_121822-n9-mistralmedium3/: config.yaml  conversations.json  data.json  log.txt
saved_experiments/nephgen-nine/20250512_110427-n9-gemini25propreview/: config.yaml  conversations.json  data.json  log.txt
src/llm_annotation_prediction/: conversation.py  dataset.py  main.py  publication.py  schema.py  turn.py
src/llm_annotation_prediction/evaluation/: conversation_evaluator.py  experiment_evaluator.py  model_info.py  multi_experiment_evaluator.py  plots.py
src/llm_annotation_prediction/experiments/: async_experiment.py  experiment.py
src/llm_annotation_prediction/handlers/: __init__.py  add_user_message_handler.py  fenced_json_block_handler.py  handler.py  pubtator_tool_use_handler.py  structured_output_handler.py  web_search_handler.py
src/llm_annotation_prediction/helpers/: config.py  constants.py  format.py  http.py  logging.py  open_router.py  rate_limiter.py  save.py  schema.py  (+2 more)
(+132 files in other folders)
